<resources>
    <string name="app_name">SerialPort</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="start_polling">Start polling</string>
    <string name="stop_polling">Stop polling</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="device">Device</string>
    <string name="baudrate">BaudRate</string>
    <string name="send">Send</string>
    <string name="received">Received</string>
    <string name="clear">Clear</string>
    <string name="send_hint">Please input send messages!</string>
    <string name="new_pictures_title">New PhotoGallery Pictures</string>
    <string name="new_pictures_text">You have new pictures in PhotoGallery.</string>
</resources>
