<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_item_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/search"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_clear"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/clear_search"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_toggle_polling"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/start_polling"
        app:showAsAction="ifRoom"/>
</menu>