<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:orientation="horizontal" >

        <Switch
            android:id="@+id/serial_switch"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textOff="@string/closed"
            android:textOn="@string/opened"/>

            <TextView
                android:id="@+id/serial_device_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/device"/>

            <Spinner
                android:id="@+id/devices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:prompt="@string/device"
                android:spinnerMode="dialog"/>

            <TextView
                android:id="@+id/serial_baud_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/baudRate"/>

            <Spinner
                android:id="@+id/baudrates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/baudrates"
                android:gravity="center"
                android:prompt="@string/baudRate"
                android:spinnerMode="dialog"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dip"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/send" />

            <EditText
                android:id="@+id/send_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/send_hint" />

            <Button
                android:id="@+id/send_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onSendClick"
                android:text="@string/send" >
            </Button>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/send_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

            <Button
                android:id="@+id/send_clear_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/clear" />
            <!-- android:onClick="onSendClear" -->
        </LinearLayout>

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/received" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/received_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>

            <Button
                android:id="@+id/receive_clear_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/clear" />
            <!-- android:onClick="onReceiveClear" -->
        </LinearLayout>
    </LinearLayout>

</LinearLayout>